--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,11 +1,13 @@
 name: Docker
 
 on:
+  workflow_dispatch:
+  
   push:
     # Publish `master` as Docker `latest` image.
-    branches:
-      - master
-
+#     branches:
+#       - master
+    
     # Publish `v1.2.3` tags as releases.
     tags:
       - v*
