--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask
-setuptools
-Flask-Cors
+Flask==1.1.2
+setuptools==50.3.0
+Flask-Cors==3.0.9
 click==7.1.2
 numpy==1.18.5
 tensorflow==2.3.1
 opencv-python==4.4.0.44
+jinja<3.1.0
+werkzeug==2.0.3
