--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ click==7.1.2
 numpy==1.18.5
 tensorflow==2.3.1
 opencv-python==4.4.0.44
-jinja<3.1.0
-werkzeug==2.0.3
+jinja==2.11.2
+werkzeug==1.0.1
